@@ -52,52 +52,62 @@ methods that need to be defined by the programmer in Python are:</para>
 
     <methodsynopsis language="python">
       <methodname>on_get_flags</methodname>
-      <methodparam></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_get_n_columns</methodname>
-      <methodparam></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_get_column_type</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
       <methodparam><parameter>index</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_get_iter</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
       <methodparam><parameter>path</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_get_path</methodname>
-      <methodparam><parameter>iter</parameter></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
+      <methodparam><parameter>rowref</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_get_value</methodname>
-      <methodparam><parameter>iter</parameter></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
+      <methodparam><parameter>rowref</parameter></methodparam>
       <methodparam><parameter>column</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
-      <methodname>on_get_iter_next</methodname>
-      <methodparam><parameter>iter</parameter></methodparam>
+      <methodname>on_iter_next</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
+      <methodparam><parameter>rowref</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_iter_children</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
       <methodparam><parameter>parent</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_iter_has_child</methodname>
-      <methodparam><parameter>iter</parameter></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
+      <methodparam><parameter>rowref</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_iter_n_children</methodname>
-      <methodparam><parameter>iter</parameter></methodparam>
+      <methodparam><parameter>self</parameter></methodparam>
+      <methodparam><parameter>rowref</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_iter_nth_child</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
       <methodparam><parameter>parent</parameter></methodparam>
       <methodparam><parameter>n</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
       <methodname>on_iter_parent</methodname>
+      <methodparam><parameter>self</parameter></methodparam>
       <methodparam><parameter>child</parameter></methodparam>
     </methodsynopsis>
 
