@@ -3,6 +3,13 @@
 	* pygtk-gtktreeview.xml (set_column_drag_function) Add description
 	of this PyGTK2.4 method.
 
+	* pygtk-pygtkgenerictreemodel.xml (Description) Add self as
+	a param to all the methods to be implemented and use rowref
+	instead of iter to avoid confusion. Correct method name from
+	on_get_iter_next() to on_iter_next()
+
+	* pygtk-gtktreemodel.xml (iter_next) Fix description.
+
 2004-05-28  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkpixbuf.xml (save)
